components/service-registry/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: service-registry
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: service-registry
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elservice-registry
  namespace: service-registry
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-service-registry
    weight: null
status: {}
